Sorted out some overflow issues

--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,7 @@
 .app {
   display: grid;
   grid-template: 65px calc(100vh - 65px) / 85px 1fr;
-  width: 85px;height: 100vh;
+  height: 100vh;
   width: 100%;
+  overflow: hidden;
 }
