--- a/src/components/searched-results-page/SearchedResultsPage.css
+++ b/src/components/searched-results-page/SearchedResultsPage.css
@@ -1,10 +1,8 @@
 .searched-results-page {
+    grid-area: 2 / 2 / 3 / 3;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
     align-items: center;
-    gap: 0.8rem;
-    padding: 0 0 1rem 0;
     overflow: auto;
 }
 
